media.less
@media (max-width: 1330px) {

.table__cell-one {
padding: 13px;
}
    .slide-six.show__form .subslide__take_action, .slide-six.show__pricing .subslide__take_action {
top: -60px !important;
}
.slide-six.show__pricing .subslide__table {
margin-top: -40px;
}
    .slide-six.show__form .subslide__form {
margin-top: -40px;
}
    .slide-long__text{
      width: 90%;
      font-size: 6rem;
    }

}
@media (max-width: 1200px), (max-height: 844px) {
    html{
        font-size: 55%;
    }
    // .foto__text {
    // top: -170px;
    // // font-size: 18px;
    // // font-weight: 700;
    // }
    // .slide-six .subslide__take_action {
    // padding-top: 12rem;
    // }
    // .slide-long__text{
    //   font-size: 30px;
    // }
    .slide-six.show__form .subslide__take_action, .slide-six.show__pricing .subslide__take_action {
top: -50px !important;
}
.table__cell-one {
padding: 5px;
}
.slide-six.show__pricing .subslide__table {
margin-top: -30px;
}
    .slide-six.show__form .subslide__form {
margin-top: -30px;
}
}
@media (max-width: 1030px) {
    html{
        font-size: 55%;
    }
    .foto__text {
    top: -170px;
    // font-size: 18px;
    // font-weight: 700;
    }
    .slide-six .subslide__take_action {
    padding-top: 12rem;
    }
    // .slide-long__text{
    //   font-size: 30px;
    // }
    .slide-six.show__form .subslide__take_action, .slide-six.show__pricing .subslide__take_action {
top: -100px !important;
}
.table__cell-one {
padding: 5px;
}
.slide-six.show__pricing .subslide__table {
margin-top: -60px;
}
    .slide-six.show__form .subslide__form {
margin-top: -60px;
}
}
@media (max-width: 920px) {
    html{
        font-size: 50%;
    }
        .login{
 // .line-c(8);
width: 80%;

}
.slide-long__link {
font-size: 2.4rem;
}


}
@media (max-width: 810px) {
    html{
        font-size: 45%;
    }
  .main-nav__item{
    font-size: 1.8rem;
  }
        .slide-six.show__form .subslide__take_action, .slide-six.show__pricing .subslide__take_action {
top: -70px !important;
}
//     .table__cell-one {
// padding: 5px;
// }
}
@media (max-width: 700px) {
    html{
        font-size: 40%;
        overflow: visible;
    }

    //     .slide-long__text{
    //   font-size: 20px;
    // }
.pagination{
    display: none;
}
.header{
    // overflow: hidden;
    // position: relative;
    background: #111;
    padding-top: 14px;
}
.logo{
    // max-height: 40px;
    padding-left: 10px;
    padding-top: 5px;
}
.main-nav{
    // position: fixed;
    width: 80%;
    // height: 100%;
    top: 20px !important;
    right: 10%;
    // float: none;
    background-color: #000;
    // // margin: 20px;
    padding: 0;
    border-radius: 18px;
    // display: block;
    opacity: 0;
    visibility: hidden;
    transition: .1s;
    overflow: hidden;
    // z-index: -4;
}
.mob-menu{
    // content: '\2630';
    height: 70px;
    width: 70px;
    max-height: 70px;
    font-size: 50px;
    line-height: 70px;
    vertical-align: middle;
    // background-color: red;
    position: fixed;
    top: 4px;
    right: 4px;
    display: block;
    cursor: pointer;
    transition: .1s;
    background: transparent url("images/context-menu-icon.png") center 20px no-repeat;
}
.mob-act{
    color: #555;
}
// .block{
// display: block !important;

// }
.mob-menu-act{
          visibility: visible !important;
  opacity: 1  !important;
  z-index: 12;
}

.main-nav .main-nav__item{
    display: block;
    // margin: 0 10px;
    margin: 0;
    // width: 100%;
    padding: 15px;
    font-size: 22px;
    border-radius: 0;
    border: none;
    border-bottom: 1px solid #222;
    transition: 0s;

    &:active,
    &.active,
    &:hover{
      background-color: #dd1036;
    }
}
.main-nav .main-nav__item:nth-child(4){
    border: none;

}
.main-nav__item.main-nav__item__special {
background: none;
}
// .main-nav__item:active {
// text-shadow: 1px 1px 4px #FFF, -1px -1px 4px #FFF;
// }
.main-nav__item:hover {
text-shadow: none;
}
.header.fixed{
  // background: #000;
  // transition: background-color 0.5s ease-in-out;
  .main-nav{
    position: fixed;
    top: 80px;
    // left: ;
    // transition: all 0.5s ease-in-out;
  }
}
.footer__text--connect{
    display: none;
}

    .foto__text {
top: -440px;
font-size: 22px;
text-align: center;
// font-weight: 700;
}
.footer {
height: 15rem;
// background: #070C17;
// position: absolute;
// bottom: 0;
// left: 0;
// width: 100%;
}
.footer__text-icons {
font-size: 2rem;
text-align: center;
float: none;
padding-left: 10px;
// padding-left: 0;
padding-bottom: 1.5rem;
// margin-bottom: 3rem;
}
.footer__text {
font-size: 3rem;
float: none;
// padding: 2rem 0;
// padding: 0;
// padding-left: 30px;
padding-left: 0;
text-align: center;
}
.footer__icons {
float: none;
// padding-top: 0;
}

.footer__social-icon img{
    width: 5rem
}
.text-art {
width: 250px;
}

.slide-four:before, .slide-five:before, .slide-new:before, .slide-three:before {
//content: '';
//display: block;
//position: absolute;
left: 8%;
top: 10%;
width: 84%;
height: 30%;
//background-image: url(images/screen2.jpg);
//background-repeat: no-repeat;
//background-position: center;
background-size: contain;
  z-index: 10;
}
.slide-three:after, .slide-four:after,.slide-five:after, .slide-new:after{
  height: 80%;
}
.foto__text {
top: -420px;
font-size: 18px;
//text-align: center;
}
.slide-long__link:nth-child(3) {
//padding-right: 10px;
padding-top: 20px;
padding-bottom: 20px;
//text-decoration: underline;
//display: inline-block;
//color: #00abf0;
}
.slide-small__link {
  white-space: nowrap;
//font-family: nexa_boldregular, Arial, sans-serif;
//display: inline-block;
font-size: 14px;
padding: 7px 0;
margin: 0px 5px 40px;
//position: relative;
border: 2px solid #fff;
//border-radius: 28px;
//margin-bottom: 30px;
}
.separator{
    display: none !important;
}
.slide-small__link:before {
content: '';
//position: absolute;
//top: 7px;
//left: 17px;
//line-height: 1;
font-size: 0px;
}
.slide-small__link span {
padding-left: 25px;
//padding-right: 25px;
}
.slide-long__link{
  white-space: nowrap;
}

#login {
overflow: scroll;
}
.login__background {
display: none;
}
.slide-two .text{
  padding-top: 50px;
}
.black__text__secondary{
  margin-bottom: 40px;
  line-height: 40px;
  font-size: 6em;
}
  .animated_blocks section.gears{
    height: 200px;
    margin-bottom: 60px;
  }
  .animated_blocks section.linecharts{
    margin-bottom: 70px;
  }
  .animated_blocks section.iphones{
    height: 250px;
    margin-bottom: 80px;
  }
  //Font Corrections
  .foto__text{
    padding-right: 5%;
    padding-left: 5%;
    font-size: 5rem;
  }
}
@media (max-width: 650px) {
    html{
        font-size: 35%;
    }

}
@media (max-width: 570px) {
    html{
        font-size: 30%;
    }

.slide-small__text:nth-child(3) {
font-size: 14px;

}
.slide-small__text:nth-child(2) {
font-size: 7rem;
line-height: 1.1;
}
.anima-small-slide{
  transform: translateY(300px);
}
.slide-long__link {
font-size: 4rem;
}
.slide-long__link:nth-child(2){
    width: 60%;
}
.slide-long__btn {
    width: 50%;
}
.slide-six.show__form .subslide__take_action, .slide-six.show__pricing .subslide__take_action {
top: -50px !important;
}
.slide-long__input {
width: 70%;
}
}
@media (max-width: 490px) {
    html{
        font-size: 25%;
    }
    #login {
visibility: hidden;
// visibility: visible;
opacity: 0;
// opacity: 1;
// -webkit-transition: .5s;
// transition: .5s;
}
.login__form {
width: 95%;
float: none;
// margin-left: 4.166666666666667%;
// position: relative;
}
.login__social-block {
width: 95%;
float: none;
// margin-left: 4.166666666666667%;
// position: relative;
}
.login {

margin-top: 20%;
}
.login__close {
top: 24px;
right: 20px;
background-color: transparent;
width: 36px;
// text-align: center;
height: 32px;
// background-image: url(images/close_btn.png) 50% 50%;
background-position: center center;
  &:active{
    background-color: transparent;
  }
}
.text-art {
width: 170px;
}
}

